// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme Matches snapshot when OS sync off 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="theme_settings.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    alwaysBounceVertical={false}
    contentContainerStyle={
      Object {
        "paddingVertical": 35,
      }
    }
    style={
      Object {
        "backgroundColor": "rgba(63,67,80,0.06)",
        "flex": 1,
      }
    }
    testID="theme_settings.scroll"
  >
    <OsSyncSection
      onToggle={[Function]}
      osColorScheme="light"
      selected={false}
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "colorScheme": "light",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
    <ThemeSection
      activeThemeType="Denim"
      allowCustomThemes={true}
      allowedThemes={
        Array [
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "colorScheme": "light",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "key": "denim",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          },
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "colorScheme": "light",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "key": "sapphire",
            "linkColor": "#1c58d9",
            "mentionBg": "#ffffff",
            "mentionColor": "#174ab5",
            "mentionHighlightBg": "#7ff0f0",
            "mentionHighlightLink": "#0d6e6e",
            "newMessageSeparator": "#15b7b7",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#174ab5",
            "sidebarHeaderBg": "#1542a2",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#133a91",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#57b5f0",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#2a58ba",
            "sidebarUnreadText": "#ffffff",
            "type": "Sapphire",
          },
          Object {
            "awayIndicator": "#f5ab07",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "colorScheme": "light",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "key": "quartz",
            "linkColor": "#1c58d9",
            "mentionBg": "#1c58d9",
            "mentionColor": "#ffffff",
            "mentionHighlightBg": "#7ff0f0",
            "mentionHighlightLink": "#0d6e6e",
            "newMessageSeparator": "#15b7b7",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#f4f4f6",
            "sidebarHeaderBg": "#e8e9ed",
            "sidebarHeaderTextColor": "#2d3039",
            "sidebarTeamBarBg": "#dddfe4",
            "sidebarText": "#090a0b",
            "sidebarTextActiveBorder": "#32a4ec",
            "sidebarTextActiveColor": "#2d3039",
            "sidebarTextHoverBg": "#ebebed",
            "sidebarUnreadText": "#2d3039",
            "type": "Quartz",
          },
          Object {
            "awayIndicator": "#f5ab00",
            "buttonBg": "#386fe5",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#0a111f",
            "centerChannelColor": "#dddfe4",
            "codeTheme": "github",
            "colorScheme": "dark",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "key": "indigo",
            "linkColor": "#5d89ea",
            "mentionBg": "#1c58d9",
            "mentionColor": "#ffffff",
            "mentionHighlightBg": "#133a91",
            "mentionHighlightLink": "#a4f4f4",
            "newMessageSeparator": "#81a3ef",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#0f1a2e",
            "sidebarHeaderBg": "#152231",
            "sidebarHeaderTextColor": "#dddfe4",
            "sidebarTeamBarBg": "#05080f",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#1279ba",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#222c3f",
            "sidebarUnreadText": "#ffffff",
            "type": "Indigo",
          },
          Object {
            "awayIndicator": "#f5ab00",
            "buttonBg": "#386fe5",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#090a0b",
            "centerChannelColor": "#dddfe4",
            "codeTheme": "monokai",
            "colorScheme": "dark",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#da6c6e",
            "key": "onyx",
            "linkColor": "#5d89ea",
            "mentionBg": "#1c58d9",
            "mentionColor": "#ffffff",
            "mentionHighlightBg": "#0d6e6e",
            "mentionHighlightLink": "#a4f4f4",
            "newMessageSeparator": "#1adbdb",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#121317",
            "sidebarHeaderBg": "#1b1d22",
            "sidebarHeaderTextColor": "#dddfe4",
            "sidebarTeamBarBg": "#000000",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#1592e0",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#25262a",
            "sidebarUnreadText": "#ffffff",
            "type": "Onyx",
          },
        ]
      }
      customThemeAvailable={false}
      headerDefaultMessage="Choose a theme"
      headerId="user.settings.display.theme.chooseTheme"
      isLandscape={false}
      isTablet={false}
      onSelect={[Function]}
      testID="all_themes"
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "colorScheme": "light",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
  </ScrollView>
</RNCSafeAreaView>
`;

exports[`Theme Matches snapshot when OS sync on 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="theme_settings.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    alwaysBounceVertical={false}
    contentContainerStyle={
      Object {
        "paddingVertical": 35,
      }
    }
    style={
      Object {
        "backgroundColor": "rgba(63,67,80,0.06)",
        "flex": 1,
      }
    }
    testID="theme_settings.scroll"
  >
    <OsSyncSection
      onToggle={[Function]}
      osColorScheme="light"
      selected={true}
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "colorScheme": "light",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
    <React.Fragment>
      <ThemeSection
        activeThemeType="Denim"
        allowCustomThemes={true}
        allowedThemes={
          Array [
            Object {
              "awayIndicator": "#ffbc1f",
              "buttonBg": "#1c58d9",
              "buttonColor": "#ffffff",
              "centerChannelBg": "#ffffff",
              "centerChannelColor": "#3f4350",
              "codeTheme": "github",
              "colorScheme": "light",
              "dndIndicator": "#d24b4e",
              "errorTextColor": "#d24b4e",
              "key": "denim",
              "linkColor": "#386fe5",
              "mentionBg": "#ffffff",
              "mentionColor": "#1e325c",
              "mentionHighlightBg": "#ffd470",
              "mentionHighlightLink": "#1b1d22",
              "newMessageSeparator": "#cc8f00",
              "onlineIndicator": "#3db887",
              "sidebarBg": "#1e325c",
              "sidebarHeaderBg": "#192a4d",
              "sidebarHeaderTextColor": "#ffffff",
              "sidebarTeamBarBg": "#14213e",
              "sidebarText": "#ffffff",
              "sidebarTextActiveBorder": "#5d89ea",
              "sidebarTextActiveColor": "#ffffff",
              "sidebarTextHoverBg": "#28427b",
              "sidebarUnreadText": "#ffffff",
              "type": "Denim",
            },
            Object {
              "awayIndicator": "#ffbc1f",
              "buttonBg": "#1c58d9",
              "buttonColor": "#ffffff",
              "centerChannelBg": "#ffffff",
              "centerChannelColor": "#3f4350",
              "codeTheme": "github",
              "colorScheme": "light",
              "dndIndicator": "#d24b4e",
              "errorTextColor": "#d24b4e",
              "key": "sapphire",
              "linkColor": "#1c58d9",
              "mentionBg": "#ffffff",
              "mentionColor": "#174ab5",
              "mentionHighlightBg": "#7ff0f0",
              "mentionHighlightLink": "#0d6e6e",
              "newMessageSeparator": "#15b7b7",
              "onlineIndicator": "#3db887",
              "sidebarBg": "#174ab5",
              "sidebarHeaderBg": "#1542a2",
              "sidebarHeaderTextColor": "#ffffff",
              "sidebarTeamBarBg": "#133a91",
              "sidebarText": "#ffffff",
              "sidebarTextActiveBorder": "#57b5f0",
              "sidebarTextActiveColor": "#ffffff",
              "sidebarTextHoverBg": "#2a58ba",
              "sidebarUnreadText": "#ffffff",
              "type": "Sapphire",
            },
            Object {
              "awayIndicator": "#f5ab07",
              "buttonBg": "#1c58d9",
              "buttonColor": "#ffffff",
              "centerChannelBg": "#ffffff",
              "centerChannelColor": "#3f4350",
              "codeTheme": "github",
              "colorScheme": "light",
              "dndIndicator": "#d24b4e",
              "errorTextColor": "#d24b4e",
              "key": "quartz",
              "linkColor": "#1c58d9",
              "mentionBg": "#1c58d9",
              "mentionColor": "#ffffff",
              "mentionHighlightBg": "#7ff0f0",
              "mentionHighlightLink": "#0d6e6e",
              "newMessageSeparator": "#15b7b7",
              "onlineIndicator": "#3db887",
              "sidebarBg": "#f4f4f6",
              "sidebarHeaderBg": "#e8e9ed",
              "sidebarHeaderTextColor": "#2d3039",
              "sidebarTeamBarBg": "#dddfe4",
              "sidebarText": "#090a0b",
              "sidebarTextActiveBorder": "#32a4ec",
              "sidebarTextActiveColor": "#2d3039",
              "sidebarTextHoverBg": "#ebebed",
              "sidebarUnreadText": "#2d3039",
              "type": "Quartz",
            },
          ]
        }
        customThemeAvailable={false}
        headerDefaultMessage="Choose a light theme"
        headerId="user.settings.display.theme.chooseLight"
        isLandscape={false}
        isTablet={false}
        onSelect={[Function]}
        testID="light_themes"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "colorScheme": "light",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
      />
      <ThemeSection
        activeThemeType="Indigo"
        allowCustomThemes={true}
        allowedThemes={
          Array [
            Object {
              "awayIndicator": "#f5ab00",
              "buttonBg": "#386fe5",
              "buttonColor": "#ffffff",
              "centerChannelBg": "#0a111f",
              "centerChannelColor": "#dddfe4",
              "codeTheme": "github",
              "colorScheme": "dark",
              "dndIndicator": "#d24b4e",
              "errorTextColor": "#d24b4e",
              "key": "indigo",
              "linkColor": "#5d89ea",
              "mentionBg": "#1c58d9",
              "mentionColor": "#ffffff",
              "mentionHighlightBg": "#133a91",
              "mentionHighlightLink": "#a4f4f4",
              "newMessageSeparator": "#81a3ef",
              "onlineIndicator": "#3db887",
              "sidebarBg": "#0f1a2e",
              "sidebarHeaderBg": "#152231",
              "sidebarHeaderTextColor": "#dddfe4",
              "sidebarTeamBarBg": "#05080f",
              "sidebarText": "#ffffff",
              "sidebarTextActiveBorder": "#1279ba",
              "sidebarTextActiveColor": "#ffffff",
              "sidebarTextHoverBg": "#222c3f",
              "sidebarUnreadText": "#ffffff",
              "type": "Indigo",
            },
            Object {
              "awayIndicator": "#f5ab00",
              "buttonBg": "#386fe5",
              "buttonColor": "#ffffff",
              "centerChannelBg": "#090a0b",
              "centerChannelColor": "#dddfe4",
              "codeTheme": "monokai",
              "colorScheme": "dark",
              "dndIndicator": "#d24b4e",
              "errorTextColor": "#da6c6e",
              "key": "onyx",
              "linkColor": "#5d89ea",
              "mentionBg": "#1c58d9",
              "mentionColor": "#ffffff",
              "mentionHighlightBg": "#0d6e6e",
              "mentionHighlightLink": "#a4f4f4",
              "newMessageSeparator": "#1adbdb",
              "onlineIndicator": "#3db887",
              "sidebarBg": "#121317",
              "sidebarHeaderBg": "#1b1d22",
              "sidebarHeaderTextColor": "#dddfe4",
              "sidebarTeamBarBg": "#000000",
              "sidebarText": "#ffffff",
              "sidebarTextActiveBorder": "#1592e0",
              "sidebarTextActiveColor": "#ffffff",
              "sidebarTextHoverBg": "#25262a",
              "sidebarUnreadText": "#ffffff",
              "type": "Onyx",
            },
          ]
        }
        customThemeAvailable={false}
        headerDefaultMessage="Choose a dark theme"
        headerId="user.settings.display.theme.chooseDark"
        isLandscape={false}
        isTablet={false}
        onSelect={[Function]}
        testID="dark_themes"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "colorScheme": "light",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
      />
    </React.Fragment>
  </ScrollView>
</RNCSafeAreaView>
`;
